# RandNumSourcesInMCSim

./: .gitmodules  README.md
DSMCPI/: CMakeLists.txt
DSMCPI/include/: supportFunctions.h
DSMCPI/src/: pi_dsmc.cpp  supportFunctions.cpp
entropyToFile/: CMakeLists.txt
entropyToFile/include/: supportFunctions.h
entropyToFile/src/: entropyDump.cpp  supportFunctions.cpp
evaluation/: DSMCPi_WorkflowDataEvaluation.ipynb  SciPaperVisualisations.ipynb  Systematic_Error.ipynb  Uniformity_TestStatistics.ipynb
evaluation/PointDistributionData/Homogeneity_examples/: Code_4_plots.ipynb
nDCoordinates/: CMakeLists.txt
nDCoordinates/include/: QRNGRandomDevice.h  supportFunctions.h
nDCoordinates/src/: coordinates.cpp  supportFunctions.cpp
workflows/: README.md
workflows/coordinateWorkflow/: README.md  Snakefile_PRNG.smk  Snakefile_QRNG.smk  coord_PRNG_snakemake.yaml  coord_QRNG_snakemake.yaml
workflows/coordinateWorkflow/scripts/: LESplot.py  meanDistribution.py  nearestNeighbourPlot.py
workflows/piWorkflow/: README.md  Snakefile_PRNG.smk  Snakefile_QRNG.smk  Snakefile_pPRNG.smk  configuration_PRNG.yaml  configuration_QRNG.yaml  configuration_pPRNG.yaml
workflows/piWorkflow/scripts/: assay_template_PRNG.sh  assay_template_QRNG.sh
